docs/examples/kubernetes/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rdatacore
  labels:
    app.kubernetes.io/name: rdatacore
    app.kubernetes.io/part-of: rdatacore
